# multikinect

./: CMakeLists.txt  all4.cpp  openni_grabber.cpp  seeAll.sh  tennis2
data/: tennis1
exe/: 00-moveMotor.cpp  01-cloudViewer.cpp  02-multipleClouds.cpp  03-pclVisualizer.cpp  04-viewOpencv.cpp  05-detectBall.cpp  06-register2.cpp  06-register4.cpp  07-pointLoc.cpp  08-viewAll.cpp  can01_labelPoints.cpp  test.cpp  test2.cpp  test3.cpp
